--- a/따릉이_NOGADA_LAST.ipynb
+++ b/따릉이_NOGADA_LAST.ipynb
@@ -1033,134 +1033,134 @@
       "source": [
         "for i in range(len(user_data)):\n",
         "    \n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(gangnam_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"강남구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"강남구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(gangnam_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"강남구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"강남구\"] = 5\n",
         "        \n",
         "\n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(gangdong_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"강동구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"강동구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(gangdong_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"강동구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"강동구\"] = 5\n",
         "        \n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(gangbuk_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"강북구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"강북구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(gangbuk_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"강북구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"강북구\"] = 5\n",
         "    \n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(gangseo_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"강서구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"강서구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(gangseo_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"강서구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"강서구\"] = 5\n",
         "\n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(gwanak_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"관악구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"관악구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(gwanak_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"관악구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"관악구\"] = 5\n",
         "\n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(gwangjin_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"광진구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"광진구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(gwangjin_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"광진구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"광진구\"] = 5\n",
         "    \n",
         "\n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(guro_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"구로구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"구로구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(guro_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"구로구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"구로구\"] = 5\n",
         "\n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(gc_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"금천구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"금천구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(gc_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"금천구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"금천구\"] = 5\n",
         "    \n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(noone_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"노원구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"노원구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(noone_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"노원구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"노원구\"] = 5\n",
         "\n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(dobong_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"도봉구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"도봉구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(dobong_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"도봉구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"도봉구\"] = 5\n",
         "        \n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(dongdaem_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"동대문구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"동대문구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(dongdaem_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"동대문구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"동대문구\"] = 5\n",
         "        \n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(dongjak_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"동작구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"동작구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(dongjak_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"동작구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"동작구\"] = 5\n",
         "\n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(mapo_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"마포구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"마포구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(mapo_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"마포구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"마포구\"] = 5\n",
         "\n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(seodaem_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"서대문구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"서대문구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(seodaem_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"서대문구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"서대문구\"] = 5\n",
         "\n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(seocho_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"서초구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"서초구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(seocho_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"서초구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"서초구\"] = 5\n",
         "\n",
         "\n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(sungdong_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"성동구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"성동구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(sungdong_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"성동구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"성동구\"] = 5\n",
         "    \n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(sungbook_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"성북구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"성북구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(sungbook_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"성북구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"성북구\"] = 5\n",
         "        \n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(songpa_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"송파구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"송파구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(songpa_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"송파구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"송파구\"] = 5\n",
         "        \n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(yang_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"양천구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"양천구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(yang_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"양천구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"양천구\"] = 5\n",
         "        \n",
         "    if user_data.loc[i][\"대여소번호\"] in list(youngpo_df[\"대여소번호\"].values):\n",
         "        user_data.loc[i][\"영등포구\"] = 1\n",
         "    else:\n",
         "        user_data.loc[i][\"영등포구\"] = 5\n",
         "        \n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(yongsan_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"용산구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"용산구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(yongsan_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"용산구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"용산구\"] = 5\n",
         "        \n",
         "        \n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(ep_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"은평구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"은평구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(ep_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"은평구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"은평구\"] = 5\n",
         "        \n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(jongro_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"종로구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"종로구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(jongro_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"종로구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"종로구\"] = 5\n",
         "        \n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(joong_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"중구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"중구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(joong_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"중구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"중구\"] = 5\n",
         "        \n",
-        "    # if user_data.loc[i][\"대여소번호\"] in list(lastnogada_df[\"대여소번호\"].values):\n",
-        "    #     user_data.loc[i][\"중랑구\"] = 1\n",
-        "    # else:\n",
-        "    #     user_data.loc[i][\"중랑구\"] = 5\n",
+        "    if user_data.loc[i][\"대여소번호\"] in list(lastnogada_df[\"대여소번호\"].values):\n",
+        "        user_data.loc[i][\"중랑구\"] = 1\n",
+        "    else:\n",
+        "        user_data.loc[i][\"중랑구\"] = 5\n",
         "        \n",
         "          \n",
         "user_data"
